# ffn

./: pyproject.toml
ffn/: core.py  data.py
