[tool.poetry]
name = "ffn"
version = "0.3.5"
description = ""
authors = ["Karl Chan <https://github.com/karl-chan>"]

[tool.poetry.dependencies]
python = "^3.8"
future = "^0.18.2"
ipython = "^7.18.1"
numpy = "^1.19.2"
pandas = "^1.1.3"
tabulate = "^0.8.7"
pandas-datareader = "^0.9.0"
decorator = "^4.4.2"
scikit-learn = "^0.23.2"
scipy = "^1.5.3"
matplotlib = "^3.3.2"
coverage = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
